tests/baselines/reference/augmentedTypesClass2a.errors.txt
tests/cases/compiler/augmentedTypesClass2a.ts(2,7): error TS2300: Duplicate identifier 'c2'.
tests/cases/compiler/augmentedTypesClass2a.ts(2,7): error TS2300: Duplicate identifier 'c2'.
tests/cases/compiler/augmentedTypesClass2a.ts(3,10): error TS2300: Duplicate identifier 'c2'.
tests/cases/compiler/augmentedTypesClass2a.ts(3,10): error TS2300: Duplicate identifier 'c2'.
tests/cases/compiler/augmentedTypesClass2a.ts(4,5): error TS2300: Duplicate identifier 'c2'.


==== tests/cases/compiler/augmentedTypesClass2a.ts (5 errors) ====
    //// class then function
    class c2 { public foo() { } } // error
          ~~
!!! error TS2300: Duplicate identifier 'c2'.
!!! related TS6203 tests/cases/compiler/augmentedTypesClass2a.ts:3:10: 'c2' was also declared here.
          ~~
!!! error TS2300: Duplicate identifier 'c2'.
    function c2() { } // error
             ~~
!!! error TS2300: Duplicate identifier 'c2'.
!!! related TS6203 tests/cases/compiler/augmentedTypesClass2a.ts:2:7: 'c2' was also declared here.
             ~~
!!! error TS2300: Duplicate identifier 'c2'.
    var c2 = () => { }
        ~~
!!! error TS2300: Duplicate identifier 'c2'.